--- a/index.html
+++ b/index.html
@@ -17,20 +17,103 @@
 
     <header>
 
-        <h1>Hello World!</h1>
+        <header class = "header">
+
+        <h1>PORTFOLIO</h1>
 
         <nav>
+            <nav class = "nav-1">
 
-            <button>About Me</button>
+                <button class = "button">
+
+            <button>Profile</button>
+            <button>Work Experience</button>
+            <button>Projects</button>
+            <button>Contact Me</button>
 
         </nav>
 
     </header>
+
+    <main>
+
+        <aside>
+            <aside class = "aside">
+
+            <h2>NAZA OKAFOR</h2>
+
+            <img src = "1mb pic.JPG" alt = "Profile Picture"/>
+
+            <p>
+               Full stack web developer with training in biotech aiming to promote a user friendly interface on the web.
+               Skills in HTML5, CSS3, JavaScript, and web design from Georgia Tech Professional Education. Extremely delighted 
+               to showcase my expertise as a creator in web design and hard-working abilities as I strive to innovate the best user
+               experience on websites. 
+            </p>
+
+        </aside>
+
+        <section>
+
+            <section class = "section-1">
+                <h3>Profile</h3>
+
+                <p></p>
+
+            <section class = "section-1">
+                <h4>Work Experience</h4>    
+
+                <p></p>
+
+        </section>
+
+<nav>
+
+    <nav class = "nav-2">
+
+    <h5>PROJECTS</h5>
+
+</nav>
+
+<section>
+
+    <section class = "horiseon">
+        <a href = "https://nazaokafor.github.io/horiseon-advertisement/">HORISEON ADVERTISEMENT</a>
+        <img src = "" alt = "" />
+
+    <section class = "section-2">
+       <a href = "https://www.google.com/">PROJECT #2</a>
+       <img src = "" alt = ""/>
+
+    <section class = "section-2">    
+       <a href = "https://www.apple.com/">PROJECT #3</a>
+       <img src = "" alt = ""/>
+
+</section>
+
+    </main>
     
 </body>
 
 <footer>
+    <footer class = "footer">
+    <p>Contact Me</p>
+<br></br>
+    <ul class = "contactlinks">
+        <li>
+        <a href = "https://www.linkedin.com/in/chinaza-okafor-219b05151/"><u>LinkedIn</u></a>
+        </li>
 
+        <li>
+        <a href = "https://github.com/nazaokafor"><u>GitHub</u></a>
+        </li>
+
+        <li>
+        <a href = "mailto:okafornaza@gmail.com"><u>Gmail</u></a>
+        </li>
+    </ul>
+<br></br>
+     <p>Last Update: &copy; November 2021</p>
 </footer>
 
 </html>
