--- a/index.html
+++ b/index.html
@@ -17,19 +17,14 @@
 
     <header>
 
-        <header class = "header">
-
-        <h1>PORTFOLIO</h1>
+        <h1>NAZA OKAFOR</h1>
 
         <nav>
-            <nav class = "nav-1">
 
-                <button class = "button">
-
-            <button>Profile</button>
-            <button>Work Experience</button>
-            <button>Projects</button>
-            <button>Contact Me</button>
+            <a>About Me</a>
+            <a>Work Experience</a>
+            <a>Projects</a>
+            <a>Contact Me</a>
 
         </nav>
 
