--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <meta charset="UTF-8"/>    
 
-<link rel = "stylesheet" href = "reset.css">
-<link rel = "stylesheet" href = "style.css">
+<link rel = "stylesheet" href = "assets/css/reset.css">
+<link rel = "stylesheet" href = "assets/css/style.css">
 
 <title>Welcome to My Portfolio!</title>
 
@@ -32,59 +32,11 @@
 
     <main>
 
-        <aside>
-            <aside class = "aside">
-
-            <h2>NAZA OKAFOR</h2>
-
-            <img src = "1mb pic.JPG" alt = "Profile Picture"/>
-
-            <p>
-               Full stack web developer with training in biotech aiming to promote a user friendly interface on the web.
-               Skills in HTML5, CSS3, JavaScript, and web design from Georgia Tech Professional Education. Extremely delighted 
-               to showcase my expertise as a creator in web design and hard-working abilities as I strive to innovate the best user
-               experience on websites. 
-            </p>
-
-        </aside>
-
         <section>
-
-            <section class = "section-1">
-                <h3>Profile</h3>
-
-                <p></p>
-
-            <section class = "section-1">
-                <h4>Work Experience</h4>    
-
-                <p></p>
-
+            <h2>PORTFOLIO</h2>
         </section>
 
-<nav>
 
-    <nav class = "nav-2">
-
-    <h5>PROJECTS</h5>
-
-</nav>
-
-<section>
-
-    <section class = "horiseon">
-        <a href = "https://nazaokafor.github.io/horiseon-advertisement/">HORISEON ADVERTISEMENT</a>
-        <img src = "" alt = "" />
-
-    <section class = "section-2">
-       <a href = "https://www.google.com/">PROJECT #2</a>
-       <img src = "" alt = ""/>
-
-    <section class = "section-2">    
-       <a href = "https://www.apple.com/">PROJECT #3</a>
-       <img src = "" alt = ""/>
-
-</section>
 
     </main>
     
