--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <main>
 
-        <section>
+        <section class= "top-section">
             <h2>PORTFOLIO</h2>
         </section>
 
@@ -49,6 +49,33 @@
         Extremely delighted to showcase my expertise as a creator in web design and hard-working abilities as I strive to 
         innovate the best user experience on websites. 
     </p>
+
+</article>
+
+<section class = "middle-section">
+    <h4>Projects</h4>
+</section>
+
+<article class = "part-2">
+
+<aside>
+    <h5>Work Experience</h5>
+</aside>
+
+<figure>
+
+ <a href="">HORISEON ADVERTISEMENT</a>
+ <figcaption></figcaption>
+ <a href="">PROJECT #2</a>
+ <figcaption></figcaption>
+ <a href="">PROJECT #3</a>
+ <figcaption></figcaption>
+ <a href="">PROJECT #4</a>
+ <figcaption></figcaption>
+ <a href="">PROJECT #5</a>
+ <figcaption></figcaption>
+
+</figure>
 
 </article>
 
