--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
         <nav>
 
-            <a>About Me</a>
-            <a>Work Experience</a>
-            <a>Projects</a>
-            <a>Contact Me</a>
+            <a href = "#About-Me">About Me</a>
+            <a href = "#My-Work">My Work</a>
+            <a href = "#Projects">Projects</a>
+            <a href = "#Contact-Me">Contact Me</a>
 
         </nav>
 
@@ -39,8 +39,10 @@
 <article class = "part-1">
 
     <aside>
-    <h3>About Me</h3>
+    <h3 id ="About-Me">About Me</h3>
     </aside>
+
+    <section class = "about-me-flexbox">
 
     <img src = "assets/img/1mb pic.JPG" alt = "Profile Picture"/>
 
@@ -50,58 +52,61 @@
         innovate the best user experience on websites. 
     </p>
 
+</section>
+
 </article>
 
+
 <section class = "middle-section">
-    <h4>Projects</h4>
+    <h4 id = "Projects">Projects</h4>
 </section>
 
 <article class = "part-2">
 
 <aside>
-    <h5>Work Experience</h5>
+    <h5 id = "My-Work">My Work</h5>
 </aside>
 
 <figure>
+ <section class = "big-flexbox">
+    
+    <a href="https://nazaokafor.github.io/horiseon-advertisement/"><img src="assets/img/image1.jpg" alt="Horiseon Advertisement"></a>
+ 
+</section>
 
- <a href="">HORISEON ADVERTISEMENT</a>
- <figcaption></figcaption>
- <a href="">PROJECT #2</a>
- <figcaption></figcaption>
- <a href="">PROJECT #3</a>
- <figcaption></figcaption>
- <a href="">PROJECT #4</a>
- <figcaption></figcaption>
- <a href="">PROJECT #5</a>
- <figcaption></figcaption>
 
+ <section class ="small-flexbox-1">
+     <a href = "https://www.bbc.com/"><img src = "assets/img/image2.jpg" alt = "PROJECT #2"></a>
+   
+ </section>
+ 
+ <section class = "small-flexbox-2">
+<a href="https://www.cnn.com/"><img src = "assets/img/image3.jpg"></a>
+ 
+</section>
+
+<section class = "small-flexbox-3">
+ <a href = "https://www.apple.com/"><img src = "assets/img/image4.png"></a>
+   
+</section>
 </figure>
 
 </article>
 
     </main>
     
+<section class = "part-3">
+
+<aside>
+    <h6 id = "Contact-Me">Contact Me</h6>
+</aside>
+
+<content>
+    <a href = "https://www.linkedin.com/in/chinaza-okafor-219b05151/">LinkedIn</a>
+    <a href = "https://github.com/nazaokafor">GitHub</a>
+    <a href = "mailto:okafornaza@gmail.com">Gmail</a>
+</content>
+
+</section>
 </body>
-
-<footer>
-    <footer class = "footer">
-    <p>Contact Me</p>
-<br></br>
-    <ul class = "contactlinks">
-        <li>
-        <a href = "https://www.linkedin.com/in/chinaza-okafor-219b05151/"><u>LinkedIn</u></a>
-        </li>
-
-        <li>
-        <a href = "https://github.com/nazaokafor"><u>GitHub</u></a>
-        </li>
-
-        <li>
-        <a href = "mailto:okafornaza@gmail.com"><u>Gmail</u></a>
-        </li>
-    </ul>
-<br></br>
-     <p>Last Update: &copy; November 2021</p>
-</footer>
-
 </html>
