--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
 <head>
 
-<meta charset="UTF-8"/>    
+<meta charset="UTF-8"/>  
+<meta name ="viewport"  content = "width=device-width, initial-scale=1"/>
 
 <link rel = "stylesheet" href = "assets/css/reset.css">
 <link rel = "stylesheet" href = "assets/css/style.css">
@@ -69,24 +70,36 @@
 
 <figure>
  <section class = "big-flexbox">
+
+    <figcaption>PROJECT #1</figcaption>
+
     
-    <a href="https://nazaokafor.github.io/horiseon-advertisement/"><img src="assets/img/image1.jpg" alt="Horiseon Advertisement"></a>
+    <a href="https://nazaokafor.github.io/horiseon-advertisement/"><img class = "jpg" src="assets/img/image1.jpg" alt="Horiseon Advertisement"></a>
  
 </section>
 
 
  <section class ="small-flexbox-1">
-     <a href = "https://www.bbc.com/"><img src = "assets/img/image2.jpg" alt = "PROJECT #2"></a>
+    
+    <figcaption>PROJECT #2</figcaption>
+
+     <a href = "https://www.bbc.com/"><img class = "jpg" src = "assets/img/image2.jpg" alt = "PROJECT #2"></a>
    
  </section>
  
  <section class = "small-flexbox-2">
-<a href="https://www.cnn.com/"><img src = "assets/img/image3.jpg"></a>
+
+    <figcaption>PROJECT #3</figcaption>
+
+<a href="https://www.cnn.com/"><img class = "jpg" src = "assets/img/image3.jpg"></a>
  
 </section>
 
 <section class = "small-flexbox-3">
- <a href = "https://www.apple.com/"><img src = "assets/img/image4.png"></a>
+
+    <figcaption>PROJECT #4</figcaption>
+
+ <a href = "https://www.apple.com/"><img class = "jpg" src = "assets/img/image4.png"></a>
    
 </section>
 </figure>
