replaced url with first project link

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     
     <figcaption>PROJECT #2</figcaption>
 
-     <a href = "https://www.bbc.com/"><img class = "jpg" src = "assets/img/image2.jpg" alt = "PROJECT #2"></a>
+     <a href = "https://ginocorp.github.io/project-one-music-generator/"><img class = "jpg" src = "assets/img/image2.jpg" alt = "Deezer Music Generator"></a>
    
  </section>
  
